syntax="proto3";
option csharp_namespace="grpcServisi";

service GrpcIdentity {
	rpc Registracija (RegMsg) returns (StandardReplyMsg);
	rpc LogIn (RegMsg) returns (StandardReplyMsg);
	rpc LogOut (EmptyMsg) returns (EmptyMsg);
	rpc UnosKnjige (KnjigaMsg) returns (StandardReplyMsg);
	rpc Upload (stream FajlMsg) returns (EmptyMsg);
	rpc Download (EmptyMsg) returns (stream FajlMsg);
}

message FajlMsg {
	repeated int32 bajt = 1;
}

message KnjigaMsg {
	int32 ID = 1;
	string Naziv = 2;
	repeated AutorMsg Autori = 3;
}

message AutorMsg {
	int32 ID = 1;
	string Ime = 2;
	repeated KnjigaMsg Knjige = 3;
}

message StandardReplyMsg {
	bool Uspeh = 1;
	oneof Err {
		string Greska = 2;
		KnjigaMsg Knjiga = 3;
		EmptyMsg BasNista = 4;
	}
}

message EmptyMsg {}

message RegMsg {
	string Username = 1;
	string Password = 2;
	oneof Tip{
		KorisnikMsg Korisnik = 3;
		ZaposlenMsg Zaposleni = 4;
		bool Login = 5;
	}
}

message KorisnikMsg {
	string Ime = 1;
	string Prezime = 2;
}

message ZaposlenMsg {
	string Ime = 1;
	string Prezime = 2;
	string Pozicija = 3;
}